<resources>
    <string name="app_name">StalkYourFriendsDroid</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_settings">User settings</string>
    <string name="title_activity_main">Your notes</string>
    <string name="title_activity_terms">Terms and conditions</string>
    <string name="title_activity_privacy">Privacy policy</string>
    <string name="title_activity_resetpassword">Reset Password</string>

    <string name="title_activity_note_detail">Note detail</string>
    <string name="title_activity_note_create">Create a new note</string>
    <string name="title_activity_note_edit">Edit note</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_reset_password">Reset password</string>
    <string name="button_goto_login">I already have an account</string>
    <string name="button_settings">Settings</string>

    <string name="button_create_new_note">Create a new note</string>
    <string name="button_create">Create</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="edittext_email">Email…</string>
    <string name="edittext_password">Password…</string>
    <string name="edittext_password_confirmation">Confirm password…</string>
    <string name="edittext_newpassword">New password…</string>

    <string name="edittext_title">Note title…</string>
    <string name="edittext_content">Note content…</string>

    <string name="textview_register_terms">By registering you accept the application \
        <u>Terms &amp; Conditions</u></string>
    <string name="textview_logout">Logout</string>
    <string name="textview_delete_account">Delete account</string>
    <string name="textview_forgot_password">Forgot password?</string>

    <string name="textview_title">Title:</string>
    <string name="textview_content">Content:</string>

    <string name="message_error">Some error occurred</string>
    <string name="message_expiration">This version is about to expire</string>
    <string name="message_expired">This version has expired</string>
    <string name="message_update">Please, update the application</string>
    <string name="message_ok">Ok</string>

</resources>
